--- a/ply_to_feature/ply_to_feature.vcxproj
+++ b/ply_to_feature/ply_to_feature.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="BoundingBox.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="glHeaders.h" />
+    <ClInclude Include="HOPE_Mask_Generator.h" />
     <ClInclude Include="keypoint_utils.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="plyData.h" />
@@ -158,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="mesh_frag.glsl" />
+    <None Include="mesh_mask.glsl" />
     <None Include="mesh_vertex.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
